<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ActionBarTabsActivity!</string>
    <string name="app_name">MPDHD</string>
    <string name="server_settings">Server Settings</string>
    <string name="connect">Connect</string>
    <string name="settings">Settings</string>
    <string name="port">Port</string>
    <string name="password">Password</string>
    <string name="host">Host</string>
    <string name="password_description">Password for the Server</string>
    <string name="host_description">MPD-Server Hostname or IP-Address</string>
    <string name="port_description">MPD-Server port (Default: 6600)</string>
    <string name="database">Database</string>
    <string name="connected">Connected</string>
    <string name="stream_toggle">Toggle Streaming</string>
    <string name="streaming_port_description">MPD-Server http streaming port (Default: 8000)</string>
    <string name="streaming_port">Streaming Port</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="replace">Replace</string>
    <string name="add_and_play">Add &amp; Play</string>
    <string name="saved">Saved Playlists:</string>
    <string name="save">Save Queue</string>
    <string name="songs">Songs:</string>
    <string name="artists">Artists:</string>
    <string name="albums">Albums:</string>
    <string name="reconnect">Reconnect</string>

</resources>