<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:key="preferencescreen">


	<PreferenceCategory android:title="@string/server_settings">


		<EditTextPreference 
			android:key="hostname"
			android:title="@string/host" android:summary="@string/host_description" />
		<EditTextPreference android:key="port"
			android:title="@string/port" android:defaultValue="6600"
			android:summary="@string/port_description" />
		<EditTextPreference android:key="password"
			android:title="@string/password" android:defaultValue=""
			android:password="true" android:summary="@string/password_description" />
		<EditTextPreference android:key="streamingPort"
			android:title="@string/streaming_port" android:defaultValue="8000"
			android:summary="@string/streaming_port_description" />


	</PreferenceCategory>


</PreferenceScreen>